--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,15 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="/assets/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Hello</title>
+  </head>
+  <body>
+    <main style="max-width: 42rem; margin: 4rem auto; font: 18px/1.6 Georgia, serif;">
+      <h1>About: Hello world</h1>
+      <p>This site is published with GitHub Pages.</p>
+    </main>
+  </body>
+</html>
