--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Hello</title>
   </head>
   <body>
+    <nav class="nav">
+      <a href="/">Home</a>
+      <a href="/about/">About</a>
+    </nav>
     <main style="max-width: 42rem; margin: 4rem auto; font: 18px/1.6 Georgia, serif;">
       <h1>Hello world</h1>
       <p>This site is published with GitHub Pages.</p>
